# wirl

./: .gitignore  .pre-commit-config.local.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  procfile  pyrightconfig.json
.github/workflows/: ci.yml
apps/backend/: Makefile  README.md  pyproject.toml
apps/backend/backend/: database.py  main.py  models.py  scheduler.py  workflow_loader.py
apps/backend/tests/: __init__.py  test_scheduler.py
apps/frontend/: .gitignore  Makefile  README.md  babel.config.js  index.html  jest.config.js  package-lock.json  package.json  vite.config.js
apps/frontend/src/: App.css  App.jsx  App.test.jsx  WorkflowRunDetailsModal.jsx  api.js  constants.js  index.css  models.js  timer.js
apps/frontend/src/components/: WorkflowRunsTable.jsx  (+1 more)
apps/workers/: Makefile  pyproject.toml
apps/workers/workers/: db.py  worker_pool.py  workflow_loader.py
extensions/vscode/: .gitignore  README.md  package-lock.json  package.json
extensions/vscode/syntaxes/: wirl.tmLanguage.json
infra/github/: github_action_document_sort.yml
infra/macos/: launchctl.plist.template
scripts/: container-start-postgres.sh
scripts/macos/: container-start-postgres.sh  mac-install-launchctl.sh
workflow_definitions/autorater_eval_workflow/: README.md  __init__.py  autorater.py  autorater_eval_workflow.py  autorater_eval_workflow.wirl  requirements.txt
workflow_definitions/autorater_eval_workflow/tests/: __init__.py  test_autorater_eval_workflow.py
workflow_definitions/demand_eval_workflow/: README.md  __init__.py  demand_eval_workflow.py  demand_eval_workflow.wirl  prompts.py  report_template.py  requirements.txt
workflow_definitions/demand_eval_workflow/tests/: __init__.py  test_demand_eval_workflow.py
workflow_definitions/news_digest_workflow/: README.md  news_digest_workflow.py  news_digest_workflow.wirl  requirements.txt
workflow_definitions/paper_rename_workflow/: paper_rename_workflow.py  paper_rename_workflow.wirl  prompts.py  requirements.txt
workflow_definitions/photo_notes_workflow/: README.md  photo_notes_workflow.py  photo_notes_workflow.wirl  requirements.txt
(+7 files in other folders)
