[project]
name = "wirl-backend"
version = "0.1.0"
description = "FastAPI backend for WIRL workflow runner"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Artem Goncharov" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "fastapi-mcp>=0.1.0",
  "croniter>=2.0.5",
  "psycopg2-binary>=2.9.0",
  "langgraph>=0.6.0",
  "langgraph-checkpoint-postgres>=2.0.0",
]

[project.urls]
Repository = "https://github.com/wirl/apps/backend"

[dependency-groups]
dev = [
  "ruff>=0.5.0",
  "pytest>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
default-groups = ['dev']
