[project]
name = "wirl-workers"
version = "0.1.0"
description = "Async workers for WIRL workflow runner"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Artem Goncharov" }
]
license = { text = "MIT" }
dependencies = [
  "asyncpg>=0.29.0",
  "langgraph>=0.4",
  "wirl-pregel-runner>=0.1.0",
  "langgraph-checkpoint-sqlite",
  "langgraph-checkpoint-postgres",
  "psycopg[binary]>=3.2"
]

[project.urls]
Repository = "https://github.com/wirl/apps/workers"

[dependency-groups]
dev = [
  "ruff>=0.5.0",
  "pytest>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workers"]

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
wirl-pregel-runner = { path = "../../packages/wirl-pregel-runner", editable = true }
wirl-lang = { path = "../../packages/wirl-lang", editable = true }

[tool.uv]
default-groups = ['dev']




